# sysadmin

./: .gitignore  .pre-commit-config.yaml  .starry_release.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker_control.sh  third-party-build.sh  travis-build.sh
clients/python/: .gitignore  README.md  gen-factory-settings.py  migrate.py  requirements.txt  setup.py  sysadminctl  templater.py  tox.ini
clients/python/sysadmin/: Client.py  ConfigTemplateRenderer.py  LazySysAdmin.py  Migrations.py  SysAdminUser.py  __init__.py
clients/python/sysadmin_helpers/: helpers.py
clients/python/tests/: helpers_test.py  sys_test.py  test_parental_controls.py
clients/python/tests/configs/: config.yaml  hooksConfig.yaml  log4cxx.config
clients/rust/: .gitignore  Cargo.toml  DEV-README.md  README.md  build.rs
clients/rust/examples/: sysadmin-example.rs
clients/rust/src/: error_chain_generated_errors.rs  errors.rs  lib.rs  sysadminctl.proto  sysadminctl.rs  tests.rs
cmake/: Ccache.cmake  CppLint.cmake  FindAmqpCpp.cmake  FindDecibelCpp.cmake  FindGlog.cmake  FindSqlite3.cmake  FindUv.cmake  FindYamlCpp.cmake  StarryLib.cmake
configs/local/: config.yaml  hooks.yaml
configs/local/templates/: template.tmpl
configs/prod/: config.yaml  sysadmin-notify.service  sysadmin.service
decibel-cpp/: .clang-format  .valgrindrc  CMakeLists.txt  README.md
decibel-cpp/include/decibel/: Config.h  Protobuf.h  ToString.h  Traits.h  stdlib.h
decibel-cpp/include/decibel/messaging/: Exchanges.h  FramedBuffer.h  IProtocolFactory.h  IRabbitMQMessageHandler.h  ITransport.h  LoopingTask.h  ProtobufOneofProtocol.h  ProtobufProtocol.h  ProtobufProtocolFactory.h  Protocol.h  ProtocolFactory.h  RabbitMQMessageHandler.h  RabbitMQProtocol.h  Reactor.h  TcpServer.h  TcpTransport.h
decibel-cpp/include/decibel/niceuv/: BaseTimerEvent.h  EventLoop.h  FileChangeEvent.h  FutureSubprocess.h  ISubprocess.h  ITimer.h  IdleEvent.h  InterfaceInfo.h  OneShotTimerEvent.h  Poller.h  SubprocessHandler.h  TcpConn.h  TcpServer.h  ThreadSync.h  TimerEvent.h  UvHandle.h  UvStream.h  WorkCancellable.h
decibel-cpp/patches/folly/: 0001-Handle-compilation-error-by-removing-the-check-entir.patch
decibel-cpp/patches/yaml-cpp/: 0001-Update-node_data-remove-to-use-new-equals-method.patch  0002-Fix-some-Node-operator-regressions-from-0.5.1.patch
decibel-cpp/src/: CMakeLists.txt  Factorial.cpp
decibel-cpp/src/decibel/: Protobuf.cpp
decibel-cpp/src/decibel/messaging/: Exchanges.cpp  IRabbitMQMessageHandler.cpp  ITransport.cpp  LoopingTask.cpp  Protocol.cpp  RabbitMQProtocol.cpp  Reactor.cpp  TcpServer.cpp  TcpTransport.cpp
decibel-cpp/src/decibel/niceuv/: BaseTimerEvent.cpp  EventLoop.cpp  FileChangeEvent.cpp  FutureSubprocess.cpp  ITimer.cpp  IdleEvent.cpp  InterfaceInfo.cpp  OneShotTimerEvent.cpp  Poller.cpp  SubprocessHandler.cpp  TcpConn.cpp  TcpServer.cpp  TimerEvent.cpp  UvStream.cpp  WorkCancellable.cpp
decibel-cpp/test/: CMakeLists.txt  Helpers.h  test_config.cpp  test_connection_handler.cpp  test_itimer.cpp  test_looping_task.cpp  test_main.cpp  test_niceuv.cpp  test_protobuf_get_set.cpp  test_protobuf_handler.cpp  test_protobuf_protocol.cpp  test_reactor.cpp  testpb.proto  testrpc.proto
decibel-cpp/test/fixtures/: EchoServerFixture.cpp  EchoServerFixture.h  EventLoopFixture.h
decibel-cpp/test/testdata/config.d/: 00_config.yaml  config.yaml
docker/: Dockerfile  bootstrap.sh  third-party-build.sh
docker/patches/folly/: 0001-never-use-fibers.patch  0003-handle-compilation-error-by-removing-the-check-entir.patch  infinite-memory-leak-workaround.patch
docker/patches/yaml-cpp/: .0002-Fix-some-Node-operator-regressions-from-0.5.1.patch.swp
docker_builds/: Dockerfile  docker-setup.sh  image_deploy.sh  install-ampq-cpp.sh  install-folly.sh  install-protobuf.sh  install-system-deps.sh
docker_builds/patches/folly/: 0003-remove-cxx-std-from-pkgconfig.patch
factory-settings/: migration.yaml  settings.yaml
scripts/: gen-factory-settings.py  migrate.py  setup.py  sysadmin-api  sysadminctl  templater.py
scripts/sysadmin/: Client.py  LazySysAdmin.py  Migrations.py  __init__.py
scripts/tests/: systest.py
src/: CMakeLists.txt  CommitHistory.cpp  CommitHistory.h  ConfigTypes.cpp  ConfigTypes.h  Configurator.cpp  Configurator.h  ExternalRunner.cpp  ExternalRunner.h  HookConfig.cpp  HookConfig.h  HookInitializer.cpp  HookInitializer.h  HookManager.cpp  HookManager.h  HookTable.cpp  HookTable.h  HookUser.cpp  HookUser.h  ICommandInterface.h  IConfigurator.h  IExternalRunner.h  IHistoryStorage.h  KeyValueFormatter.cpp  KeyValueFormatter.h  LocalHistoryStorage.cpp  LocalHistoryStorage.h  LocalYAMLStorage.cpp  LocalYAMLStorage.h  LockedConfigPairMap.cpp  LockedConfigPairMap.h  MemoryCache.cpp  MemoryCache.h  PassThroughConfigurator.cpp  PassThroughConfigurator.h  ProtobufTranslator.cpp  ProtobufTranslator.h  ServiceScriptRunner.cpp  ServiceScriptRunner.h  SizeAgeBoundMap.h  (+12 more)
sysadmin-api/: CMakeLists.txt  README.md  sysadminctl.proto
sysadmin-rs/: Cargo.toml  README.md  build.rs
sysadmin-rs/examples/: sysadmin-example.rs
sysadmin-rs/src/: lib.rs  sysadminctl.proto
test/: CMakeLists.txt  Helpers.h  argdumper.py  test_commit_history.cpp  test_config_types.cpp  test_configurator.cpp  test_hook_config.cpp  test_hook_initializer.cpp  test_hook_manager.cpp  test_hook_table.cpp  test_hook_user.cpp  test_key_value_formatter.cpp  test_local_history_storage.cpp  test_local_yaml_storage.cpp  test_main.cpp  test_memory_cache.cpp  test_pass_through_configurator.cpp  test_protobuf_translator.cpp  test_service_script_runner.cpp  test_size_age_bound_map.cpp  test_sys_admin_controller.cpp  test_templater_runner.cpp  test_transaction_manager.cpp  testpb.proto
test/configs/: config.yaml  hooks.yaml  hooksConfig.yaml
test/configs/templates/: test.tmpl
