[package]
name = "sysadmin-bindings"
# The version will eventually match StarryInternet/sysadmin
# but since crates.io bakes in the concept of semantic versioning
# we don't want to go to 1.0 until we have the api finalized
# http://doc.crates.io/manifest.html#the-version-field
# https://github.com/StarryInternet/sysadmin
version = "0.0.3"
authors = ["StarryInternet Open Source <oss@starry.com>"]
include = [
    "build.rs",
    "src/*.rs",
    "src/sysadminctl.proto",
    "README.md",
    "Cargo.toml",
]
exclude = ["sysadmin-api/README.md"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["sysadmin", "StarryInternet"]
license = "Apache-2.0"
description = "Rust bindings for StarryInternet/sysadmin. Sysadmin is an embedded database and system configuration tool"
homepage = "https://github.com/StarryInternet/sysadmin"
repository = "https://github.com/StarryInternet/sysadmin"

[dependencies]
protobuf = "1.4.2"
bufstream = "0.1.3"
bytes = "0.4.*"
byteorder = "1.1.0"


[build-dependencies]
protoc-rust = "1.4"

