[package]
name = "sysadmin-bindings"
version = "2.1.0"
authors = ["Starry Inc <oss@starry.com>"]
include = [
    "build.rs",
    "src/*.rs",
    "src/sysadminctl.proto",
    "README.md",
    "Cargo.toml",
]
exclude = ["sysadmin-api/README.md"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["sysadmin", "StarryInternet"]
description = "Rust bindings for StarryInternet/sysadmin. Sysadmin is an embedded database and system configuration tool"
homepage = "https://github.com/StarryInternet/sysadmin"
repository = "https://github.com/StarryInternet/sysadmin"
build = "build.rs"


[dependencies]
protobuf = "~1.4"
bufstream = "~0.1"
bytes = "~0.4"
byteorder = "~1.2"
serde_derive = "~1.0"
serde = "~1.0"
serde_json = "~1.0"
failure="~0.1"

[build-dependencies]
protoc-rust = "~1.4"

